--- a/style.css
+++ b/style.css
@@ -218,12 +218,166 @@ a{
 
 .main-content{
   height: 642px;
-  text-align: center;
-  background-color: black;
+  /* text-align: center; */
+  /* background-color: black; */
+  background-image: linear-gradient(to bottom, rgba(66, 65, 65, 0.467), rgba(41, 40, 40, 0.300));
   flex: 1;
-  background-color:rgba(41, 40, 40, 0.467);
+  /* background-color:rgba(41, 40, 40, 0.467); */
   border-radius: 10px 10px 10px 10px;
   margin-left: 8px;
+}
+
+.header{
+  width: 68.25rem;
+  height: 4rem;
+  /* border: 2px solid green; */
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.header-element{
+  width: 68.25rem;
+  height: 2rem;
+  /* padding: 0rem 1.113rem; */
+  /* border: 2px solid red; */
+  display: flex;
+  /* justify-content: center; */
+  align-items: center;
+}
+
+.img{
+  width: 2rem;
+  height: 2rem;
+  padding: 0rem;
+  /* font-size: 1rem;  */
+  display: inline-flex;
+  justify-content: center;
+  align-items: center;
+  position: relative;
+  margin-left: 2rem;
+  gap: 0.5rem;
+  
+}
+
+.img img{
+  width: 1rem;
+  height: 1rem;
+  padding: 0.55rem 0.55rem 0.55rem 0.55rem;
+  border-radius: 50%;
+  background-color: #000000;
+  margin-left: 0.5rem;
+  /* gap: 50rem; */
+}
+
+.explore a{
+  width: 8.95rem;
+  height: 2rem;
+  font: 0.875rem;
+  padding: 0.25rem 1rem;
+  background-color: white;
+  color:#000000;
+  border-radius: 1.875rem 1.875rem 1.875rem 1.875rem;
+  margin-left: 42rem;
+}
+
+.install a{
+  width: 8.95rem;
+  height: 2rem;
+  font: 0.875rem;
+  padding: 0.25rem 1rem;
+  background-color: #000000;
+  color:white;
+  border-radius: 1.875rem 1.875rem 1.875rem 1.875rem;
+  margin-left: 0.5rem;
+}
+
+.menu{
+  width: 68.25rem;
+  height: 3.5rem; 
+  display: flex;
+  /* justify-content: center; */
+  align-items: center;
+  gap: 0.5rem;
+}
+
+#all{
+  width: 2.538rem;
+  height: 2rem;
+  /* padding: 0.25rem 0.75rem; */
+  margin-left: 0.8rem;
+  background-color: #fff;
+  color: black;
+  border-radius: 1.5rem 1.5rem 1.5rem 1.5rem;
+  display: inline-flex;
+  justify-content: center;
+  align-items: center;
+  position: relative;
+}
+
+#music{
+  width: 3.809rem;
+  height: 2rem;
+  /* padding: 0.25rem 0.75rem; */
+  border-radius: 1.5rem 1.5rem 1.5rem 1.5rem;
+  background-color: rgba(108, 108, 108, 0.3);
+  display: inline-flex;
+  justify-content: center;
+  align-items: center;
+  position: relative;
+}
+
+#podcast{
+  width: 5.083rem;
+  height: 2rem;
+  /* padding: 0.25rem 0.75rem; */
+  border-radius: 1.5rem 1.5rem 1.5rem 1.5rem;
+  background-color: rgba(108, 108, 108, 0.3);
+  display: inline-flex;
+  justify-content: center;
+  align-items: center;
+  position: relative;
+}
+
+.played{
+  /* display: inline;
+  gap: 0.938rem;
+  align-items: center; */
+}
+
+.line{
+  width: 16.131rem;
+  height: 3rem;
+  /* padding: 0.55rem 0.55rem 0.55rem 0.55rem; */
+  margin: 1rem 0rem 0rem 1rem;
+  /* display: flex; */
+  /* text-align: center; */
+  display: inline-block;
+  gap: 0.938rem;
+  /* align-items: center; */
+  background-color: rgba(108, 108, 108, 0.3);
+  border-radius: 0.3rem;
+  font-weight: 600;
+  /* flex-wrap: wrap; */
+  /* gap: 0.938rem; */
+  /* align-items: center;*/
+}
+
+.line img{
+  /* width: 16.131rem;
+  height: 3rem; */
+  /* width: 5rem;
+  height: 5rem; */
+  width: 25rem;
+  width: 3rem;
+  border-radius: 0.3rem 0rem 0rem 0.3rem;
+}
+
+.line a{
+  /* display: flex; */
+  /* text-align: center;
+  align-items: center;
+  justify-content: center; */
 }
 
 .music-player{
